# pyatari

./: Pipfile  README.md  pyproject.toml
pyatari/: atascii.py  grammar.py  parser.py  tokens.py
samples/: PRINT.BAS  PRINT.LST  mydisk.atr  print.bas
