[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "template_package"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "jmcb", email = "joelsgp@protonmail.com"}]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
]
dependencies = []
optional-dependencies = []
dynamic = ["version"]

[project.urls]
Home = "https://github.com/joelsgp/uoy-assessment-uploader"

[project.scripts]
template-package = "template_package:main"

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
version = {attr = "template_package.__version__"}
