[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyatari"
description = "Python tools for working with Atari BASIC"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "jmcb", email = "joelsgp@protonmail.com"}]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Basic",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []
optional-dependencies = []
dynamic = ["version"]

[project.urls]
Home = "https://github.com/joelsgp/pyatari"

[project.scripts]
pyatari = "pyatari:main"

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
version = {attr = "pyatari.__version__"}
